app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  containers:
  - name: con1
    image: nginx
    ports:
    - containerPort: 80
