svc-multi-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: con1
    nodePort: 30123
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: con2
    nodePort: 30124
