deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mydep
  name: mydep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mydep
#  strategy: 
#    type: RollingUpdate
#    RollingUpdate:
#      maxUnavailable: 40%
#      maxSurge: 40%
  template:
    metadata:
      labels:
        app: mydep
    spec:
      containers:
      - name: con1
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

            

---
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: ClusterIP
  selector:
    app: mydep
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mydep-route
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: mydep-svc
    weight: null
