route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: myapp
    weight: null
status: {}
