wordpress.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  containers:
  - name: con1
    image: wordpress
    ports:
    - containerPort: 80
  - name: con2
    image: mysql:5.7
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
spec:
  port:
    targetPort: 80
  to:
    kind: ""
    name: wordpress
    weight: null
